clusters/homelab/apps/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: n8n-stripprefix@kubernetescrd
spec:
  rules:
  - host: asuna.chimp-ulmer.ts.net
    http:
      paths:
      - path: /n8n
        pathType: Prefix
        backend:
          service:
            name: n8n
            port:
              number: 80
